--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "tailwind:init": "tailwindcss init -p"
   },
   "dependencies": {
+    "@tiptap/extension-image": "^2.25.1",
+    "@tiptap/extension-placeholder": "^2.26.0",
+    "@tiptap/react": "^2.25.1",
+    "@tiptap/starter-kit": "^2.25.1",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
@@ -19,6 +23,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "24.0.12",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.36.0",
