--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@tiptap/extension-placeholder": "^2.26.0",
     "@tiptap/react": "^2.25.1",
     "@tiptap/starter-kit": "^2.25.1",
+    "clsx": "^2.1.1",
+    "html-react-parser": "^5.2.6",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
