--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "tailwind:init": "tailwindcss init -p"
   },
   "dependencies": {
+    "@stomp/stompjs": "^7.1.1",
     "@tiptap/extension-image": "^2.25.1",
     "@tiptap/extension-placeholder": "^2.26.0",
     "@tiptap/react": "^2.25.1",
@@ -21,6 +22,7 @@
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sockjs-client": "^1.6.1",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
@@ -28,6 +30,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "24.0.12",
     "@types/react-dom": "^19",
+    "@types/sockjs-client": "^1.5.4",
     "@typescript-eslint/eslint-plugin": "^8.36.0",
     "@typescript-eslint/parser": "^8.36.0",
     "autoprefixer": "^10.4.19",
