chore: add next-on-pages build for Cloudflare Pages

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "tailwind:init": "tailwindcss init -p"
+    "tailwind:init": "tailwindcss init -p",
+    "build:cf" : "npx @cloudflare/next-on-pages@1 build"
   },
   "dependencies": {
     "@stomp/stompjs": "^7.1.1",
@@ -26,6 +27,7 @@
     "zustand": "^5.0.6"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.13",
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "24.0.12",
