--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "tailwind:init": "tailwindcss init -p",
-    "build:cf" : "npx -y @cloudflare/next-on-pages@1"
+    "tailwind:init": "tailwindcss init -p"
   },
   "dependencies": {
     "@stomp/stompjs": "^7.1.1",
@@ -27,7 +26,6 @@
     "zustand": "^5.0.6"
   },
   "devDependencies": {
-    "@cloudflare/next-on-pages": "^1.13.13",
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "24.0.12",
