--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tiptap/starter-kit": "^2.25.1",
     "clsx": "^2.1.1",
     "html-react-parser": "^5.2.6",
+    "isomorphic-dompurify": "^2.26.0",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
